# poll

./: CMakeLists.txt  README.md  build.sh
client/: CMakeLists.txt  build.sh
client/include/: client_main.h  common.h  err_funcs.h
client/src/: client_main.c  err_funcs.c
include/: err_funcs.h  poll_main.h  poll_server.h  server.h  unix_socket.h
server/: CMakeLists.txt  build.sh
server/include/: common.h  poll_main.h  poll_server.h  unix_socket.h
server/src/: poll_main.c  poll_server.c  unix_socket.c
src/: err_funcs.c  poll_main.c  poll_server.c  server.c  unix_socket.c
src/client/: client  client_main.c
